Converted some hyphen-minuses to em dashes.

--- a/po/wesnoth/ang.po
+++ b/po/wesnoth/ang.po
@@ -4003,7 +4003,7 @@ msgid "aliases:"
 msgstr ""
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr ""
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4167,7 +4167,7 @@ msgid "Room query."
 msgstr ""
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 
 #: src/menu_events.cpp:2512
