--- a/po/wesnoth/fi.po
+++ b/po/wesnoth/fi.po
@@ -4755,7 +4755,7 @@ msgid "aliases:"
 msgstr "lyhytkomennot:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - ylläpitokomento"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4948,7 +4948,7 @@ msgid "Room query."
 msgstr "Huoneen jono."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - vain testaus, (N) - vain verkko, (A) - vain ylläpito"
 
 #: src/menu_events.cpp:2512
