--- a/po/wesnoth/fr.po
+++ b/po/wesnoth/fr.po
@@ -4822,7 +4822,7 @@ msgid "aliases:"
 msgstr "Alias :"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - commande admin"
 
 # team labels
@@ -5020,7 +5020,7 @@ msgid "Room query."
 msgstr "Requête de salle."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 "(D) - débogage uniquement, (N) - réseau uniquement, (A) - admin uniquement"
 
