--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -4871,7 +4871,7 @@ msgid "aliases:"
 msgstr "alias:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "orde de administrador (A)"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -5054,7 +5054,7 @@ msgid "Room query."
 msgstr "Petición da sala."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "só para depuración (D), só para rede (N), só para administradores (A)"
 
 #: src/menu_events.cpp:2512
