--- a/po/wesnoth/hu.po
+++ b/po/wesnoth/hu.po
@@ -4752,7 +4752,7 @@ msgid "aliases:"
 msgstr "másként:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - rendszergazdai parancs"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4949,7 +4949,7 @@ msgid "Room query."
 msgstr "Keresés a szobák között."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - csak hibakeresés, (N) - csak hálózat, (A) - csak adminisztráció"
 
 #: src/menu_events.cpp:2512
