--- a/po/wesnoth/it.po
+++ b/po/wesnoth/it.po
@@ -4747,7 +4747,7 @@ msgid "aliases:"
 msgstr "alias:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) – command di amministrazione"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4944,7 +4944,7 @@ msgid "Room query."
 msgstr "Interrogazione della stanza."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 "(D) - solo per debug, (N) - solo per rete, (A) - solo per amministratori"
 
