--- a/po/wesnoth/ja.po
+++ b/po/wesnoth/ja.po
@@ -4597,7 +4597,7 @@ msgid "aliases:"
 msgstr "エイリアス:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - 管理者コマンド"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4789,7 +4789,7 @@ msgid "Room query."
 msgstr "部屋の問い合わせ。"
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - デバッグのみ, (N) - ネットワークのみ, (A) - 管理者のみ"
 
 #: src/menu_events.cpp:2512
