--- a/po/wesnoth/lt.po
+++ b/po/wesnoth/lt.po
@@ -4668,7 +4668,7 @@ msgid "aliases:"
 msgstr "slapyvardžiai:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) – administravimo komanda"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4859,7 +4859,7 @@ msgid "Room query."
 msgstr "Kambario užklausa."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) – tik derinimo, (N) – tik tinklo, (A) – tik administravimo"
 
 #: src/menu_events.cpp:2512
