--- a/po/wesnoth/nl.po
+++ b/po/wesnoth/nl.po
@@ -4769,7 +4769,7 @@ msgid "aliases:"
 msgstr "aliassen:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - administratorcommando"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4965,7 +4965,7 @@ msgid "Room query."
 msgstr "Kamerzoekopdracht."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - enkel debug, (N) - enkel netwerk, (A) - enkel administrator"
 
 #: src/menu_events.cpp:2512
