--- a/po/wesnoth/ru.po
+++ b/po/wesnoth/ru.po
@@ -4726,7 +4726,7 @@ msgid "aliases:"
 msgstr "алиасы:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) — админская команда"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4924,7 +4924,7 @@ msgid "Room query."
 msgstr "Запрос к комнате."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 "(D) — отладочная команда, (N) — сетевая команда, (A) — админская команда"
 
