--- a/po/wesnoth/sr@latin.po
+++ b/po/wesnoth/sr@latin.po
@@ -4795,7 +4795,7 @@ msgid "aliases:"
 msgstr ""
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr ""
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4982,7 +4982,7 @@ msgid "Room query."
 msgstr "Upit sobe."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 
 #: src/menu_events.cpp:2512
