--- a/po/wesnoth/cs.po
+++ b/po/wesnoth/cs.po
@@ -4755,7 +4755,7 @@ msgid "aliases:"
 msgstr "aliasy:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - administrátorský příkaz"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4951,7 +4951,7 @@ msgid "Room query."
 msgstr "Odešle místnosti dotaz."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - pouze ladění, (N) - pouze síť, (A) - pouze admin"
 
 #: src/menu_events.cpp:2512
