--- a/po/wesnoth/en@shaw.po
+++ b/po/wesnoth/en@shaw.po
@@ -4691,7 +4691,7 @@ msgid "aliases:"
 msgstr ""
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr ""
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4878,7 +4878,7 @@ msgid "Room query."
 msgstr "𐑮𐑵𐑥 𐑒𐑢𐑽𐑦."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 
 #: src/menu_events.cpp:2512
