--- a/po/wesnoth/es.po
+++ b/po/wesnoth/es.po
@@ -4795,7 +4795,7 @@ msgid "aliases:"
 msgstr "alias:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - comando administrativo"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4998,7 +4998,7 @@ msgid "Room query."
 msgstr "Consulta de partida."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - sólo depuración, (N) - sólo red, (A) - sólo administrativo"
 
 #: src/menu_events.cpp:2512
