--- a/po/wesnoth/et.po
+++ b/po/wesnoth/et.po
@@ -4876,7 +4876,7 @@ msgid "aliases:"
 msgstr "aliased:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - haldurikäsk"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -5070,7 +5070,7 @@ msgid "Room query."
 msgstr "Ruumi päring."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - ainult silumisel, (N) - ainult võrgus, (A) - ainult haldurile"
 
 #: src/menu_events.cpp:2512
