--- a/po/wesnoth/ga.po
+++ b/po/wesnoth/ga.po
@@ -4548,7 +4548,7 @@ msgid "aliases:"
 msgstr "ainmneacha bréige:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - ordú riarthóra"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4726,7 +4726,7 @@ msgid "Room query."
 msgstr "Ceist seomra."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - dífhabhtú amháin, (N) - líonra amháin, (A) - riarthóir amháin"
 
 #: src/menu_events.cpp:2512
