--- a/po/wesnoth/he.po
+++ b/po/wesnoth/he.po
@@ -4248,7 +4248,7 @@ msgid "aliases:"
 msgstr "שמות אחרים:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - פקודת מנהל"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4438,7 +4438,7 @@ msgid "Room query."
 msgstr "בקשת חדר."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - דיבוג בלבד, (N) - רשת בלבד, (A) - מנהל בלבד"
 
 #: src/menu_events.cpp:2512
