--- a/po/wesnoth/id.po
+++ b/po/wesnoth/id.po
@@ -4837,7 +4837,7 @@ msgid "aliases:"
 msgstr "alias:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - perintah admin"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -5035,7 +5035,7 @@ msgid "Room query."
 msgstr "Bilik pertanyaan"
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr " (D) - debug saja, (N) - jaringan saja, (A) - admin saja"
 
 #: src/menu_events.cpp:2512
