--- a/po/wesnoth/is.po
+++ b/po/wesnoth/is.po
@@ -4711,7 +4711,7 @@ msgid "aliases:"
 msgstr ""
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr ""
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4903,7 +4903,7 @@ msgid "Room query."
 msgstr ""
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 
 #: src/menu_events.cpp:2512
