--- a/po/wesnoth/ko.po
+++ b/po/wesnoth/ko.po
@@ -4519,7 +4519,7 @@ msgid "aliases:"
 msgstr ""
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr ""
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4685,7 +4685,7 @@ msgid "Room query."
 msgstr ""
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - 디버그 전용, (N) - 네트워크 전용, (A) - 방장 전용"
 
 #: src/menu_events.cpp:2512
