--- a/po/wesnoth/la.po
+++ b/po/wesnoth/la.po
@@ -4706,7 +4706,7 @@ msgid "aliases:"
 msgstr ""
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr ""
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4887,7 +4887,7 @@ msgid "Room query."
 msgstr "Quaesitio spatio."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 
 #: src/menu_events.cpp:2512
