--- a/po/wesnoth/pl.po
+++ b/po/wesnoth/pl.po
@@ -4777,7 +4777,7 @@ msgid "aliases:"
 msgstr "aliasy"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - polecenie trybu administracyjnego"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4976,7 +4976,7 @@ msgid "Room query."
 msgstr "Zapytanie w pokoju."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 "(D) - tylko tryb debugowania, (N) - tylko tryb sieciowy, (A) - tylko tryb "
 "administratora"
