--- a/po/wesnoth/pt_BR.po
+++ b/po/wesnoth/pt_BR.po
@@ -4780,7 +4780,7 @@ msgid "aliases:"
 msgstr "atalhos:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - comando de administrador"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4979,7 +4979,7 @@ msgid "Room query."
 msgstr "Comando de sala."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 "(D) - somente em debug, (N) - somente em rede, (A) - somente administrador"
 
