--- a/po/wesnoth/sk.po
+++ b/po/wesnoth/sk.po
@@ -4740,7 +4740,7 @@ msgid "aliases:"
 msgstr "aliasy:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - administračný príkaz"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4933,7 +4933,7 @@ msgid "Room query."
 msgstr "Dotaz v miestnosti."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 "(D) - len pre ladenie, (N) - len na sieti, (A) - len pre administrátora"
 
