--- a/po/wesnoth/sr@ijekavian.po
+++ b/po/wesnoth/sr@ijekavian.po
@@ -4792,7 +4792,7 @@ msgid "aliases:"
 msgstr ""
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr ""
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4979,7 +4979,7 @@ msgid "Room query."
 msgstr "Упит собе."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr ""
 
 #: src/menu_events.cpp:2512
