--- a/po/wesnoth/sv.po
+++ b/po/wesnoth/sv.po
@@ -4780,7 +4780,7 @@ msgid "aliases:"
 msgstr "alias:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - admin kommando"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4980,7 +4980,7 @@ msgid "Room query."
 msgstr "Rumsförfrågan"
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - enbart felsökning, (N) - enbart nätvärk, (A) - enbart admin"
 
 #: src/menu_events.cpp:2512
