--- a/po/wesnoth/vi.po
+++ b/po/wesnoth/vi.po
@@ -4743,7 +4743,7 @@ msgid "aliases:"
 msgstr "biệt danh:"
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - lệnh của quản trị"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4945,7 +4945,7 @@ msgid "Room query."
 msgstr "Truy vấn phòng."
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - chỉ chế độ gỡ lỗi, (N) - chỉ chế độ mạng, (A) - chỉ quản trị"
 
 #: src/menu_events.cpp:2512
