--- a/po/wesnoth/zh_CN.po
+++ b/po/wesnoth/zh_CN.po
@@ -4659,7 +4659,7 @@ msgid "aliases:"
 msgstr "别名："
 
 #: src/menu_events.cpp:2300
-msgid "(A) - admin command"
+msgid "(A) — admin command"
 msgstr "(A) - 管理员命令"
 
 #: src/menu_events.cpp:2307 src/menu_events.cpp:2514
@@ -4843,7 +4843,7 @@ msgid "Room query."
 msgstr "房间查询。"
 
 #: src/menu_events.cpp:2506
-msgid "(D) - debug only, (N) - network only, (A) - admin only"
+msgid "(D) — debug only, (N) — network only, (A) — admin only"
 msgstr "(D) - 调试专用，(N) - 网战专用，(A) - 管理员专用"
 
 #: src/menu_events.cpp:2512
